[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_sitemap"
dynamic = [ "version" ]
description = "Generate a site map for your Render Engine site."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "render-engine >= 2023.12.1b3",
    "jinja2"
]

[project.optional-dependencies]
dev=[
    "pytest",
    "ruff",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_json/"
repository = "https://github.com/kjaymiller/render_engine_json/"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
src = ["src"]